--- a/LifeTracker.API/LifeTracker.API.csproj
+++ b/LifeTracker.API/LifeTracker.API.csproj
@@ -7,14 +7,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FastEndpoints" Version="5.26.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\LifeTracker.Application\LifeTracker.Application.csproj" />
       <ProjectReference Include="..\LifeTracker.Domain\LifeTracker.Domain.csproj" />
+      <ProjectReference Include="..\LifeTracker.Infrastructure\LifeTracker.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
