--- a/LifeTracker.API/appsettings.Development.json
+++ b/LifeTracker.API/appsettings.Development.json
@@ -5,9 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "PasswordPepper": "1yAm0r1a!eW3dU%",
   "Jwt": {
     "Key": "70mFLKYwvrAyFpuyXdgTTZSoGPDqcDrFUPsiV30t",
     "Issuer": "https://localhost:7090",
     "Audience": "https://localhost:7090"
+  },
+  "ConnectionStrings":  {
+    "DefaultConnection": "Data Source=.;Initial Catalog=Tracker;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True"
   }
 }
