--- a/LifeTracker.API/appsettings.json
+++ b/LifeTracker.API/appsettings.json
@@ -10,5 +10,9 @@
     "Key": "70mFLKYwvrAyFpuyXdgTTZSoGPDqcDrFUPsiV30t",
     "Issuer": "https://localhost:7090",
     "Audience": "https://localhost:7090"
+  },
+  "PasswordPepper": "1yAm0r1a!eW3dU%",
+  "ConnectionStrings":  {
+    "DefaultConnection": "Data Source=.;Initial Catalog=LifeTracker;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True"
   }
 }
