--- a/LifeTracker.Domain/LifeTracker.Domain.csproj
+++ b/LifeTracker.Domain/LifeTracker.Domain.csproj
@@ -11,4 +11,8 @@
       <Folder Include="Models\Domain\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="FastEndpoints" Version="5.26.0" />
+    </ItemGroup>
+
 </Project>
