--- a/LifeTracker.API/LifeTracker.API.csproj
+++ b/LifeTracker.API/LifeTracker.API.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
+        <PackageReference Include="tumult.Util.dotnet_helpers" Version="1.0.6.1" />
     </ItemGroup>
 
     <ItemGroup>
