--- a/LifeTracker.API/appsettings.Development.json
+++ b/LifeTracker.API/appsettings.Development.json
@@ -12,6 +12,6 @@
     "Audience": "https://localhost:7090"
   },
   "ConnectionStrings":  {
-    "DefaultConnection": "Data Source=.;Initial Catalog=Tracker;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=LifeTracker;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=True"
   }
 }
