--- a/LifeTracker.Domain/LifeTracker.Domain.csproj
+++ b/LifeTracker.Domain/LifeTracker.Domain.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="FastEndpoints" Version="5.26.0" />
+      <PackageReference Include="tumult.Util.dotnet_helpers" Version="1.0.6.1" />
     </ItemGroup>
 
 </Project>
