Add logic for saving groups and correct logic to return groups to front end

--- a/LifeTracker.Infrastructure/LifeTracker.Infrastructure.csproj
+++ b/LifeTracker.Infrastructure/LifeTracker.Infrastructure.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\LifeTracker.Domain\LifeTracker.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="QueryManagers\Groups\" />
+    </ItemGroup>
+
 </Project>
