Add expenses type and data managers

--- a/LifeTracker.Infrastructure/LifeTracker.Infrastructure.csproj
+++ b/LifeTracker.Infrastructure/LifeTracker.Infrastructure.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="QueryManagers\Groups\" />
+      <Folder Include="DataManagers\Common\" />
     </ItemGroup>
 
 </Project>
